--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "concurrently": "^8.0.1",
     "cookie-session": "^2.0.0",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "mongoose": "^7.2.0",
     "nodemon": "^2.0.22",
     "parser": "^0.1.4",
     "passport": "^0.5.3",
     "passport-google-oauth20": "^2.0.0",
+    "path-parser": "^6.1.0",
+    "sendgrid": "^5.2.3",
     "stripe": "^12.6.0"
   }
 }
